Fix spacing with input radio on payment screen

--- a/app/assets/stylesheets/pages/payments.sass
+++ b/app/assets/stylesheets/pages/payments.sass
@@ -15,6 +15,9 @@
     .expiration dd
       margin-left: +emCalc(40px)
 
+    input[type="radio"]
+      margin-bottom: +emCalc(5px)
+
   .add-new-creditcard-form.with-others-cards,
   .add-new-bankaccount-form.with-other-bank
     margin-top: +emCalc(25px)
